# soapy

./: .gitignore  CMakeLists.txt
cmake/: cpm-spdlog.cmake
soapy/: CMakeSettings.json
soapy/src/: rfnm.h  rfnm_compiler.h  rfnm_constants.h  rfnm_construction.cpp  rfnm_conversion.h  rfnm_identification.cpp  rfnm_stream.cpp  rfnm_thread.cpp
src/: rfnm_conversion.cpp  rfnm_types.cpp  rfnm_types.h
